# veridian

./: .env.example  .gitignore  README.md  alembic.ini  migrate_db.py  prd_text.txt  pyproject.toml  registered_chats.json  render.yaml  requirements.txt  veridian.db  veridian_prd.docx
backend/: __init__.py  config.py  deps.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/auth/: jwt.py
backend/db/: __init__.py  cache.py  graph.py  qdrant.py
backend/middleware/: request_id.py
backend/models/: __init__.py  base.py  claim.py  user.py
backend/routers/: analyze.py  auth.py  claims.py  dashboard.py  health.py  image.py  metrics.py  receipts.py  voiceprint.py  webhooks.py
backend/schemas/: __init__.py  analysis.py  auth.py  claims.py
backend/services/: flagger.py  orchestrator.py  scraper.py
bot/: formatter.py  telegram_bot.py  whatsapp.py
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/lib/: api.ts
docs/: api.yaml  deployment.md  ml-models.md
extension/: package.json
extension/background/: service-worker.ts
extension/contents/: overlay.tsx  scanner.ts
extension/popup/: index.tsx
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
infra/k8s/: api-deployment.yaml  keda-scalers.yaml  workers-deployment.yaml
ml/: __init__.py  base.py
ml/audio/: __init__.py  cloud_whisper.py  rawnet2.py  resemblyzer.py
ml/image/: __init__.py  clip_context.py  cloud_vision.py  dire_detector.py  ela_detector.py
ml/text/: __init__.py  binoculars.py  muril_classifier.py
ml/video/: __init__.py  faceforensics.py  syncsnet.py  temporal.py
scratch/: debug_pipeline.py  debug_viral.py  diagnose_forensics.py
scripts/: download_models.py  ingest_corpus.py  init_local_db.py  update_corpus.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_pipeline.py
tests/unit/: test_audio_video_detectors.py  test_auth.py  test_graph_service.py  test_image_detectors.py  test_schemas.py  test_text_detectors.py  test_worker_tasks.py
workers/: celery_app.py
workers/tasks/: analyze.py  audio.py  image.py  receipt.py  text.py  verify.py  video.py
workers/verification/: __init__.py  agent.py
(+8 files in other folders)
